...
            </androidx.constraintlayout.widget.ConstraintLayout>




            <ScrollView
                android:id="@+id/scroll_view_detail"
                android:focusableInTouchMode="false"
                android:descendantFocusability="blocksDescendants"
                android:layout_marginTop="-10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">



                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_movie_popular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/items_movie_popular"
                        >
                    </androidx.recyclerview.widget.RecyclerView>

...
